# squads-cli

./: CLAUDE.md  Cargo.toml  PLAN.md  README.md  SKILL.md
.github/workflows/: ci.yml  release.yml
src/: cache.rs  config.rs  lib.rs  main.rs
src/api/: auth.rs  client.rs  emoji.rs  mod.rs
src/cli/: activity.rs  auth.rs  calendar.rs  chats.rs  completions.rs  feed.rs  install.rs  mail.rs  mod.rs  notes.rs  output.rs  search.rs  teams.rs  update.rs  users.rs  utils.rs  watch.rs
src/tui/: app.rs  mod.rs  ui.rs
src/types/: calendar.rs  mail.rs  message.rs  mod.rs  team.rs  user.rs
tests/: cli_tests.rs
