[package]
name = "squads-cli"
version = "0.1.0"
edition = "2021"
description = "Microsoft Teams CLI client for AI agents and terminal users"
license = "GPL-3.0"
repository = "https://github.com/aymericcousaert/squads-cli"
keywords = ["microsoft-teams", "cli", "chat", "terminal"]
categories = ["command-line-utilities"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# TUI (optional, for later)
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
directories = "5"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"

# Output formatting
tabled = "0.17"
colored = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
tui = ["ratatui", "crossterm"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[[bin]]
name = "squads-cli"
path = "src/main.rs"
