[package]
name = "squads-cli"
version = "0.2.0"
edition = "2021"
description = "Microsoft Teams CLI client for AI agents and terminal users"
license = "GPL-3.0"
repository = "https://github.com/aymericcousaert/squads-cli"
keywords = ["microsoft-teams", "cli", "chat", "terminal"]
categories = ["command-line-utilities"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# TUI (optional, for later)
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.29", optional = true }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
reqwest = { version = "0.13", features = ["json", "rustls-native-certs", "query", "webpki-roots"] }

# WebSocket
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
directories = "6"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
rand = "0.9"

# Output formatting
tabled = "0.20"
colored = "3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
markdown = "1.0.0"

# Desktop notifications
notify-rust = "4"

# Browser & clipboard
open = "5"
arboard = "3"

# Regex for mention parsing
regex = "1"

[features]
default = []
tui = ["ratatui", "crossterm"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[[bin]]
name = "squads-cli"
path = "src/main.rs"
